@@ -1,4 +1,5 @@
 1.9.0
+   - bug [12999] "PTI-specifik config options kan fjernes fra config.txt"
    - bug [13031] "Der skal oprettes en funktion der kan konvertere et subset af CQL-syntax til Lucene-Query-syntax"
    - bug [12990] "PTI-specifik config kan fjernes."
    - bug [12994] "PluginType kan fjernes"
